--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>BopItCardGameTimer</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap" rel="stylesheet">
     <script src="libraries/expirimental/p5.min.js"></script>
     <script src="libraries/expirimental/p5.sound.js"></script>
   </head>
